<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Just Java</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="initial_quantity_value">0</string>
    <string name="order">Order</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="no_toppings">No toppings ordered</string>

    <!--MainActivity.java file-->
    <string name="order_summary_name">Name: <xliff:g id="fillForm" example="Dana">%s</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="0">%d</xliff:g></string>
    <string name="order_summary_price">Total: <xliff:g id="price" example="$10">%d</xliff:g></string>
    <string name="thank_you">Thank You!</string>
    <string name="order_summary_email_subject">Just Java order for <xliff:g id="fillForm" example="Dana">%s</xliff:g></string>

    <!--Toast messages-->
    <string name="less_than_1_coffee">You can\'t have less than a coffee!</string>
    <string name="more_than_100_coffees">You can\'t have more than 100 coffees!</string>
    <string name="name_field_blank">You have to fill your name!</string>

</resources>